<https://webkit.org/b/119487> [Gtk] Cancel authentication on load failed

Patch by Anton Obzhirov <a.obzhirov@samsung.com> on 2013-08-20
Reviewed by Martin Robinson.

Added callback to handle load-failed event in default authentication dialog.
Authentication request gets cancelled and the dialog widget gets destroyed.

* UIProcess/API/gtk/WebKitAuthenticationDialog.cpp:
(pageLoadFailed):
(webkitAuthenticationDialogInitialize):
(webkitAuthenticationDialogDispose):
(webkit_authentication_dialog_class_init):
(webkitAuthenticationDialogNew):
* UIProcess/API/gtk/WebKitAuthenticationDialog.h:
* UIProcess/API/gtk/WebKitWebView.cpp:
(webkitWebViewAuthenticate):

Canonical link: https://commits.webkit.org/137996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154329 268f45cc-cd09-0410-ab3c-d52691b4dbfc