Source/WebKit2/UIProcess/API/gtk/WebKitAuthenticationDialog.h
@@ -22,6 +22,7 @@
 
 #include "WebKitAuthenticationRequest.h"
 #include "WebKitAuthenticationWidget.h"
+#include "WebKitWebView.h"
 #include <gtk/gtk.h>
 
 G_BEGIN_DECLS
@@ -48,7 +49,7 @@ struct _WebKitAuthenticationDialogClass {
 };
 
 GType webkit_authentication_dialog_get_type();
-GtkWidget* webkitAuthenticationDialogNew(WebKitAuthenticationRequest*, CredentialStorageMode);
+GtkWidget* webkitAuthenticationDialogNew(WebKitAuthenticationRequest*, CredentialStorageMode, WebKitWebView*);
 
 G_END_DECLS
 
